tests/rustdoc-ui/intra-doc/unresolved-import-recovery.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `unresolved_crate`
  --> $DIR/unresolved-import-recovery.rs:3:5
   |
LL | use unresolved_crate::module::Name;
   |     ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `unresolved_crate`
   |
help: if you wanted to use a crate named `unresolved_crate`, use `cargo add unresolved_crate` to add it to your `Cargo.toml` and import it in your code
   |
LL + extern crate unresolved_crate;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
